@@ -55,7 +55,7 @@ module ActiveScaffold::Actions
     # The default security delegates to ActiveRecordPermissions.
     # You may override the method to customize.
     def delete_authorized?(record = nil)
-      (!nested? || !nested.readonly?) && (record || self).authorized_for?(:crud_type => :delete)
+      (!nested? || !nested.readonly?) && (record || self).authorized_for?(crud_type: :delete, reason: true)
     end
 
     def delete_ignore?(record = nil)
@@ -66,7 +66,7 @@ module ActiveScaffold::Actions
 
     def delete_authorized_filter
       link = active_scaffold_config.delete.link || active_scaffold_config.delete.class.link
-      raise ActiveScaffold::ActionNotAllowed unless send(link.security_method)
+      raise ActiveScaffold::ActionNotAllowed unless Array(send(link.security_method))[0]
     end
 
     def destroy_formats
